[gd_scene load_steps=13 format=3 uid="uid://bpmmhi3yaqe81"]

[ext_resource type="Script" uid="uid://6stol1de7c4v" path="res://resources/scripts/phonenode.gd" id="1_t21hf"]
[ext_resource type="Texture2D" uid="uid://csue4njwhcsg4" path="res://textures/pxfuel.jpg" id="2_0e3g3"]
[ext_resource type="Texture2D" uid="uid://d16qlot7r2p3m" path="res://textures/phone.png" id="2_3rj5o"]
[ext_resource type="Texture2D" uid="uid://b65xe4ix44t07" path="res://textures/chaticon.png" id="3_0e3g3"]
[ext_resource type="Texture2D" uid="uid://q0nmv0kf658c" path="res://textures/sailnet.png" id="4_hfnv5"]
[ext_resource type="Texture2D" uid="uid://cmystmgx7ip7l" path="res://textures/shopping.png" id="5_17gxr"]
[ext_resource type="Script" uid="uid://bo1tncypk0iy5" path="res://resources/scripts/state_node.gd" id="9_th6ti"]
[ext_resource type="Script" uid="uid://dox2cns5omagd" path="res://resources/scripts/texting_app.gd" id="10_o2tev"]
[ext_resource type="Script" uid="uid://c5dqib37dcr1v" path="res://resources/scripts/default_screen.gd" id="10_vsimv"]
[ext_resource type="Script" uid="uid://c6s3ig0sd5bfi" path="res://resources/scripts/laid_down.gd" id="11_o2tev"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3rj5o"]
content_margin_left = 30.0
content_margin_top = 20.0
content_margin_right = 30.0
content_margin_bottom = 20.0
texture = ExtResource("2_3rj5o")

[sub_resource type="Theme" id="Theme_0e3g3"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_3rj5o")

[node name="Phone" type="Node"]

[node name="Phonenode" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 1230.0
offset_top = 20.0
offset_right = 1680.0
offset_bottom = 920.0
script = ExtResource("1_t21hf")

[node name="PanelContainer" type="PanelContainer" parent="Phonenode"]
layout_mode = 0
offset_left = -8.0
offset_top = -4.0
offset_right = 444.0
offset_bottom = 896.0
theme = SubResource("Theme_0e3g3")

[node name="DisplayScreen" type="MarginContainer" parent="Phonenode/PanelContainer"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2

[node name="PhoneBackground" type="TextureRect" parent="Phonenode/PanelContainer/DisplayScreen"]
layout_mode = 2
texture = ExtResource("2_0e3g3")
expand_mode = 4

[node name="Apps" type="MarginContainer" parent="Phonenode/PanelContainer/DisplayScreen"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="AppsContainer" type="GridContainer" parent="Phonenode/PanelContainer/DisplayScreen/Apps"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
columns = 3

[node name="MessageIcon" type="TextureRect" parent="Phonenode/PanelContainer/DisplayScreen/Apps/AppsContainer"]
layout_mode = 2
texture = ExtResource("3_0e3g3")

[node name="NetsailIcon" type="TextureRect" parent="Phonenode/PanelContainer/DisplayScreen/Apps/AppsContainer"]
layout_mode = 2
texture = ExtResource("4_hfnv5")
expand_mode = 2

[node name="ShoppingIcon" type="TextureRect" parent="Phonenode/PanelContainer/DisplayScreen/Apps/AppsContainer"]
layout_mode = 2
texture = ExtResource("5_17gxr")
expand_mode = 2

[node name="StateNode" type="Node" parent="Phonenode" node_paths=PackedStringArray("initial_state")]
script = ExtResource("9_th6ti")
initial_state = NodePath("LaidDown")

[node name="DefaultScreen" type="Node" parent="Phonenode/StateNode"]
script = ExtResource("10_vsimv")

[node name="TextingApp" type="Node" parent="Phonenode/StateNode"]
script = ExtResource("10_o2tev")

[node name="LaidDown" type="Node" parent="Phonenode/StateNode"]
script = ExtResource("11_o2tev")

[connection signal="gui_input" from="Phonenode/PanelContainer/DisplayScreen/Apps/AppsContainer/MessageIcon" to="Phonenode/StateNode/DefaultScreen" method="_on_message_icon_gui_input"]
